# RustyEcho

./: .dockerignore  Cargo.toml  Dockerfile  README.md
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/examples/: load_test.rs
crates/gateway/src/: app.rs  error.rs  main.rs  state.rs
crates/gateway/src/routes/: mod.rs  stream.rs  transcriptions.rs
crates/gateway/tests/: stream.rs  transcriptions.rs
crates/inference/: Cargo.toml
crates/inference/examples/: prefetch_model.rs  transcribe_file.rs
crates/inference/src/: lib.rs
crates/inference/tests/: whisper.rs
