[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/audio",
    "crates/gateway", "crates/inference",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Single compact binary is the Phase 3 goal, and this is CPU-bound inference
# code, so trade longer compile times for a smaller, faster release build.
lto = true
codegen-units = 1
strip = true
