[package]
name = "rustyecho-gateway"
version = "0.1.0"
edition.workspace = true

[dependencies]
rustyecho-core = { path = "../core" }
rustyecho-audio = { path = "../audio" }
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["limit", "trace", "cors"] }
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
rustyecho-inference = { version = "0.1.0", path = "../inference" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hound = "3"
tokio-tungstenite = "0.24"
